# converter

./: converter.hs
converter/: converter.cabal  stack.yaml
converter/src/: Main.hs
