name:                converter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/converter#readme
license:             BSD3
license-file:        LICENSE
author:              mauro tubiana
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable converter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       digits,
                       ansi-terminal,
                       table-layout,
                       colour
